welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:10: error: ')' expected but 'false' found.
while (estFaceMur()false){
                   ^Runner:14: error: illegal start of simple expression
	}
        ^